# read-queue

./: .gitignore  LICENSE  README.md  pyproject.toml
ReadQueue.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: __init__.py  config.py  logging.py  main.py
app/models/: config_models.py  notion_models.py  processing_models.py  telegram_models.py
app/prompts/: summarize_link.txt
app/services/: dedup_service.py  ingestion_service.py  launcher_service.py  metadata_service.py  notion_service.py  openai_service.py  telegram_service.py
app/utils/: clipboard.py  http_utils.py  telegram_filter.py  text_utils.py  url_utils.py
config/: config.example.yaml  secrets.example.yaml
scripts/: generate_launchers.py  healthcheck.py  run_polling.py  send_clipboard.py
tests/: test_clipboard.py  test_config.py  test_dedup.py  test_ingestion.py  test_launchers.py  test_telegram_access_control.py  test_telegram_filter.py  test_url_utils.py
